--- a/index.html
+++ b/index.html
@@ -26,71 +26,71 @@
     </div>
     </div>
     <div class="wrapper header-container">
-    <div class="nav-down">
-      <p class="title-header">Интернет-магазин<br>
-        строительных материалов<br>
-        и инструментов для ремонта</p>
-      <div class="address-block">
-        <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
-        <p class="address">
-          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-        </p>
+      <div class="nav-down">
+        <p class="title-header">Интернет-магазин<br>
+          строительных материалов<br>
+          и инструментов для ремонта</p>
+        <div class="address-block">
+          <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
+          <p class="address">
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+          </p>
+        </div>
+        <div class="user-navigation">
+          <a class="login" href="#">Войти</a>
+          <a class="register" href="#">Регистрация</a>
+        </div>
       </div>
-      <div class="user-navigation">
-        <a class="login" href="#">Войти</a>
-        <a class="register" href="#">Регистрация</a>
-      </div>
+      <nav class="main-navigation">
+        <ul class="navigation color-nav">
+          <li class="nav-button"><a href="index.html">Главная</a></li>
+          <li class="nav-button"><a href="#">Компания</a></li>
+          <li class="nav-button"><a href="#">Каталог</a></li>
+          <li class="nav-button"><a href="#">Спецпредложения</a></li>
+          <li class="nav-button"><a href="#">Доставка</a></li>
+          <li class="nav-button"><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="main-navigation">
-      <ul class="navigation color-nav">
-        <li class="nav-button"><a href="index.html">Главная</a></li>
-        <li class="nav-button"><a href="#">Компания</a></li>
-        <li class="nav-button"><a href="#">Каталог</a></li>
-        <li class="nav-button"><a href="#">Спецпредложения</a></li>
-        <li class="nav-button"><a href="#">Доставка</a></li>
-        <li class="nav-button"><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
     </div>
-  </div>
   </header>
 
   <main>
     <section>
       <div class="main-container wrapper">
-      <ul class="catalog-list">
-        <li class="catalog-item material">
-          <h2>Материалы</h2>
-          <a class="catalog-button" href="#">На любой вкус</a>
-        </li>
-        <li class="catalog-item tools">
-          <h2>Инструмент</h2>
-          <a class="catalog-button" href="#">На все случаи</a>
-        </li>
-        <li class="catalog-item tech">
-          <h2>Техника</h2>
-          <a class="catalog-button" href="#">Для стройки</a>
-        </li>
-        <li class="catalog-slide slide-elements">
-          <div class="title-slide">
-            <h2 class="title-popular">Перфораторы</h2>
-            <span class="color-staff">Настоящие мужские игрушки</span>
-          </div>
-          <div class="slider-buttons">
-            <button class="slide-button-back" type="button" name="slide" disabled></button>
-            <button class="slide-button-next" type="button" name="slide"></button>
-          </div>
-          <a class="button slider-catalog-button" href="catalog.html">Открыть каталог</a>
+        <ul class="catalog-list">
+          <li class="catalog-item material">
+            <h2>Материалы</h2>
+            <a class="catalog-button" href="#">На любой вкус</a>
+          </li>
+          <li class="catalog-item tools">
+            <h2>Инструмент</h2>
+            <a class="catalog-button" href="#">На все случаи</a>
+          </li>
+          <li class="catalog-item tech">
+            <h2>Техника</h2>
+            <a class="catalog-button" href="#">Для стройки</a>
+          </li>
+          <li class="catalog-slide slide-elements">
+            <div class="title-slide">
+              <h2 class="title-popular">Перфораторы</h2>
+              <span class="color-staff">Настоящие мужские игрушки</span>
+            </div>
+            <div class="slider-buttons">
+              <button class="slide-button-back" type="button" name="slide" disabled></button>
+              <button class="slide-button-next" type="button" name="slide"></button>
+            </div>
+            <a class="button slider-catalog-button" href="catalog.html">Открыть каталог</a>
 
-        <li class="catalog-item sales">
-          <h2>Скидка 50%</h2>
-          <a class="catalog-button" href="#">А 350 товаров</a>
-        </li>
-        <li class="catalog-item deliver">
-          <h2>ДОСТАВКА</h2>
-          <a class="catalog-button" href="#">Бесплатно</a>
-        </li>
-      </ul>
+          <li class="catalog-item sales">
+            <h2>Скидка 50%</h2>
+            <a class="catalog-button" href="#">А 350 товаров</a>
+          </li>
+          <li class="catalog-item deliver">
+            <h2>ДОСТАВКА</h2>
+            <a class="catalog-button" href="#">Бесплатно</a>
+          </li>
+        </ul>
     </section>
     <section class="wrapper">
       <div class="popular-staff">
@@ -151,29 +151,29 @@
         <li class="firms-item"><a href="#"><img src="img/partners8.png" width="220" height="145" alt="METABO"></a></li>
       </ul>
     </section>
-    <section class=" basic-background">
+    <section class="basic-background">
       <div class="wrapper section-about">
-        <div class="block">
-          <h2 class="title">Сервисы</h2>
-          <p class="about-item">Хороший интернет-магазин отличается от плохого не только ценами!<br>
-            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        </div>
-        <div class="container-element-row">
-          <ul class="button-list">
-            <li class="button-toogle"><label for="button-1">Доставка</label></li>
-            <li class="button-toogle"><label for="button-2">Гарантия</label></li>
-            <li class="button-toogle"><label for="button-3">Кредит</label></li>
-          </ul>
-          <div class="block deliver-block">
-            <h2 class="service-title">Доставка</h2>
-            <p class="about-item">
-              Мы с удовольствием доставим ваш товар прямо<br>
-              к вашему подъезду совершенно бесплатно!<br>
-              Ведь мы неплохо заработаем,<br>
-              поднимая его на ваш этаж!
+        <div class="title-about">
+        <h2 class="title">Сервисы</h2>
+        <p class="about-item">Хороший интернет-магазин отличается от плохого не только ценами!<br>
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+      </div>
+      <div class="section-down">
+        <ul class="button-list">
+          <li class="button-toogle"><label for="button-1">Доставка</label></li>
+          <li class="button-toogle"><label for="button-2">Гарантия</label></li>
+          <li class="button-toogle"><label for="button-3">Кредит</label></li>
+        </ul>
+        <div class="title-about">
+          <h2 class="service-title">Доставка</h2>
+          <p class="about-item">
+            Мы с удовольствием доставим ваш товар прямо<br>
+            к вашему подъезду совершенно бесплатно!<br>
+            Ведь мы неплохо заработаем,<br>
+            поднимая его на ваш этаж!
+          </p>
           </div>
         </div>
-        </p>
       </div>
     </section>
     <section class="wrapper section-about-too">
@@ -198,7 +198,7 @@
         <a href="#">тут будет карта</a>
         <a class="button" href="#">Заблудились? напишите нам</a>
       </div>
-    </div>
+      </div>
     </section>
   </main>
   <footer>
@@ -261,13 +261,13 @@
           </ul>
           <div class="feedback">
             <address class="mail">
-            <p class="lead">Обратная связь:</p>
-            <a class="adress-mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+              <p class="lead">Обратная связь:</p>
+              <a class="adress-mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </address>
             <address class="creater">
-            <p class="lead">Разработано — </p>
-            <a class="adress-mail" href="htmlacademy.ru"> htmlacademy.ru</a>
-          </address>
+              <p class="lead">Разработано — </p>
+              <a class="adress-mail" href="htmlacademy.ru"> htmlacademy.ru</a>
+            </address>
           </div>
         </div>
       </div>
