--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           и инструментов для ремонта</p>
         <div class="address-block">
           <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
-          <p class="address">
+          <p class="address-nav">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           </p>
         </div>
@@ -77,8 +77,12 @@
               <span class="color-staff">Настоящие мужские игрушки</span>
             </div>
             <div class="slider-buttons">
-              <button class="slide-button-back" type="button" name="slide" disabled></button>
-              <button class="slide-button-next" type="button" name="slide"></button>
+              <a class="slider-button-back" href="#"><svg width="23" height="41" viewBox="0 0 23 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.83 0.965027L22.919 3.06403L5.13 20.947L22.977 38.886L20.887 40.985L0.951996 20.947L20.83 0.965027Z" fill="white"/>
+              </svg></a>
+              <a class="slider-button-next" href="#"><svg width="22" height="40" viewBox="0 0 22 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2.07562 39.0586L0.0774441 37.0108L17.093 19.564L0.021965 2.06249L2.0211 0.0146904L21.0894 19.564L2.07562 39.0586Z" fill="white"/>
+              </svg></a>
             </div>
             <a class="button slider-catalog-button" href="catalog.html">Открыть каталог</a>
 
@@ -99,6 +103,10 @@
       </div>
       <ul class="drill-list">
         <li class="drill-item">
+          <div class="drill-action">
+            <a class="buy-drill" href="#">Купить</a>
+            <a class="mark-drill" href="#">В закладку</a>
+          </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
           </p>
@@ -107,7 +115,11 @@
           <a class="buy-button" href="#">25500 Р.</a>
         </li>
 
-        <li class="drill-item">
+        <li class="drill-item new-product">
+          <div class="drill-action">
+            <a class="buy-drill" href="#">Купить</a>
+            <a class="mark-drill" href="#">В закладку</a>
+          </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           </p>
@@ -117,6 +129,10 @@
         </li>
 
         <li class="drill-item">
+          <div class="drill-action">
+            <a class="buy-drill" href="#">Купить</a>
+            <a class="mark-drill" href="#">В закладку</a>
+          </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           </p>
@@ -125,7 +141,11 @@
           <a class="buy-button" href="#">25500 Р.</a>
         </li>
 
-        <li class="drill-item">
+        <li class="drill-item new-product">
+          <div class="drill-action">
+            <a class="buy-drill" href="#">Купить</a>
+            <a class="mark-drill" href="#">В закладку</a>
+          </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           </p>
@@ -141,14 +161,14 @@
         <a class="button button-title" href="#">Все производители</a>
       </div>
       <ul class="firms-list">
-        <li class=""><a href="#"><img src="img/partners1.png" width="220" height="145" alt="BOSCH"></a></li>
-        <li class="firms-item"><a href="#"><img src="img/partners2.png" width="220" height="145" alt="MAKITA"></a></li>
-        <li class="firms-item"><a href="#"><img src="img/partners3.png" width="220" height="145" alt="DeWALT"></a></li>
-        <li class="firms-item"><a href="#"><img src="img/partners4.png" width="220" height="145" alt="ИНТРЕСКОЛ"></a></li>
-        <li class="firms-item"><a href="#"><img src="img/partners5.png" width="220" height="145" alt="HITACHI"></a></li>
-        <li class="firms-item"><a href="#"><img src="img/partners6.png" width="220" height="145" alt="LG"></a></li>
-        <li class="firms-item"><a href="#"><img src="img/partners7.png" width="220" height="145" alt="AEG"></a></li>
-        <li class="firms-item"><a href="#"><img src="img/partners8.png" width="220" height="145" alt="METABO"></a></li>
+        <li><a href="#"><img class="firms-item" src="img/partners1.png" width="220" height="145" alt="BOSCH"></a></li>
+        <li><a href="#"><img class="firms-item" src="img/partners2.png" width="220" height="145" alt="MAKITA"></a></li>
+        <li><a href="#"><img class="firms-item" src="img/partners3.png" width="220" height="145" alt="DeWALT"></a></li>
+        <li><a href="#"><img class="firms-item" src="img/partners4.png" width="220" height="145" alt="ИНТРЕСКОЛ"></a></li>
+        <li><a href="#"><img class="firms-item" src="img/partners5.png" width="220" height="145" alt="HITACHI"></a></li>
+        <li><a href="#"><img class="firms-item" src="img/partners6.png" width="220" height="145" alt="LG"></a></li>
+        <li><a href="#"><img class="firms-item" src="img/partners7.png" width="220" height="145" alt="AEG"></a></li>
+        <li><a href="#"><img class="firms-item" src="img/partners8.png" width="220" height="145" alt="METABO"></a></li>
       </ul>
     </section>
     <section class="basic-background">
@@ -184,18 +204,18 @@
         <p class="about-item">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
           Техномарт работает со многими транспортными компаниями:</p>
         <ul class="service-tips">
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
+          <li class="tips">Деловые линии</li>
+          <li class="tips">Автотрейдинг</li>
+          <li class="tips">ЖелДорЭкспедиция</li>
         </ul>
         <a class="button" href="#">Подробнее о компании</a>
       </div>
       <div class="element-about">
         <h2 class="title">Контакты</h2>
         <p class="about-item">Вы можете забрать товар сами,<br>
-          заехав в наш офис.</p>
-        <a href="#">тут будет карта</a>
-        <a class="button" href="#">Заблудились? напишите нам</a>
+          заехав в наш офис:</p>
+        <a href="#"><img src="img/map.png" width="300" height="158"></a>
+        <a class="button button-map" href="#">Заблудились? напишите нам</a>
       </div>
     </section>
   </main>
@@ -212,17 +232,17 @@
           </div>
           <nav class="nav-footer-list">
             <ul class="navigation-footer-first">
-              <li class="nav-button-footer"><a href="#">Компания</a></li>
-              <li class="nav-button-footer"><a href="#">Новости</a></li>
-              <li class="nav-button-footer"><a href="#">Каталог</a></li>
-              <li class="nav-button-footer"><a href="#">Доставка</a></li>
-              <li class="nav-button-footer"><a href="#">Контакты</a></li>
+              <li><a class="nav-button-footer first-button" href="#">Компания</a></li>
+              <li><a class="nav-button-footer" href="#">Новости</a></li>
+              <li><a class="nav-button-footer" href="#">Каталог</a></li>
+              <li><a class="nav-button-footer" href="#">Доставка</a></li>
+              <li><a class="nav-button-footer" href="#">Контакты</a></li>
             </ul>
             <ul class="navigation-footer-second">
-              <li class="nav-button-footer"><a href="#">Материал</a></li>
-              <li class="nav-button-footer"><a href="#">Техника</a></li>
-              <li class="nav-button-footer"><a href="#">Инструмент</a></li>
-              <li class="nav-button-footer"><a href="#">Спецпредлжения</a></li>
+              <li><a class="nav-button-footer first-button" href="#">Материал</a></li>
+              <li><a class="nav-button-footer" href="#">Техника</a></li>
+              <li><a class="nav-button-footer" href="#">Инструмент</a></li>
+              <li><a class="nav-button-footer" href="#">Спецпредлжения</a></li>
             </ul>
           </nav>
         </div>
