--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <h2 class="title">Контакты</h2>
         <p class="about-item">Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
-        <a href="#"><img src="img/map.png" width="300" height="158"></a>
+        <img src="img/map.jpg" width="300" height="158" alt="Карта">
         <a class="button button-map" href="#">Заблудились? напишите нам</a>
       </div>
     </section>
@@ -224,7 +224,7 @@
       <div class="wrapper">
         <div class="footer-container-first">
           <div class="footer-info">
-            <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотив Техномарт"></a>
+            <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотип Техномарт"></a>
             <address class="address-footer">
               г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
               +7 (812) 555-05-55
