--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <h2 class="title">Контакты</h2>
         <p class="about-item">Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
-        <img src="img/map.jpg" width="300" height="158" alt="Карта">
+        <img src="img/map.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19">
         <a class="button button-map" href="#">Заблудились? напишите нам</a>
       </div>
     </section>
