--- a/catalog.html
+++ b/catalog.html
@@ -329,5 +329,12 @@
       </div>
     </div>
   </footer>
+  <section class="modal-catalog">
+    <button class="modal-close-button" type="button"></button>
+    <h2 class="modal-title">Товар добавлен в корзину!</h2>
+    <div class="modal-button-catalog-list">
+      <a class="modal-button-catalog" href="#">Оформить заказ</a>
+      <a class="modal-button-catalog" href="#">Продолжить покупки</a>
+    </div>
   </section>
 </body>
