--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
             <a class="catalog-button" href="#">Для стройки</a>
           </li>
           <li class="catalog-slide slide-elements">
+            <input type="radio" id="btn-1" name="toggle" checked>
+            <input type="radio" id="btn-2" name="toggle">
             <div class="title-slide">
               <h2 class="title-popular">Перфораторы</h2>
               <span class="color-staff">Настоящие мужские игрушки</span>
             </div>
             <div class="slider-buttons">
-              <a class="slider-button-back" href="#"><svg width="23" height="41" viewBox="0 0 23 41" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M20.83 0.965027L22.919 3.06403L5.13 20.947L22.977 38.886L20.887 40.985L0.951996 20.947L20.83 0.965027Z" fill="white" />
-                </svg></a>
-              <a class="slider-button-next" href="#"><svg width="22" height="40" viewBox="0 0 22 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M2.07562 39.0586L0.0774441 37.0108L17.093 19.564L0.021965 2.06249L2.0211 0.0146904L21.0894 19.564L2.07562 39.0586Z" fill="white" />
-                </svg></a>
+               <label for="bt1"></label>
+               <label for="bt2"></label>
             </div>
+            <label class="arrow-left" for="btn-1"></label>
+            <label class="arrow-right" for="btn-2"></label>
             <a class="button slider-catalog-button" href="catalog.html">Открыть каталог</a>
-
+          </li>
           <li class="catalog-item sales">
             <h2>Скидка 50%</h2>
             <a class="catalog-button" href="#">А 350 товаров</a>
@@ -290,14 +290,9 @@
       </div>
     </div>
   </footer>
-  <section class="modal">
+  <section class="modal visual-hidden">
     <form class="feedback-form" action="index.html" method="post">
-      <a class="modal-close-button" href="#"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M13.2729 10.5L20.6949 3.07799C21.0839 2.68899 21.0839 2.05299 20.6949 1.66399L19.3359 0.304995C18.9469 -0.0840054 18.3109 -0.0840054 17.9219 0.304995L10.4999 7.72699L3.07793 0.304995C2.68893 -0.0840054 2.05293 -0.0840054 1.66393 0.304995L0.304934 1.66399C-0.0840664 2.05299 -0.0840664 2.68899 0.304934 3.07799L7.72693 10.5L0.305934 17.922C-0.0830664 18.311 -0.0830664 18.947 0.305934 19.336L1.66493 20.695C2.05393 21.084 2.68993 21.084 3.07893 20.695L10.5009 13.273L17.9229 20.695C18.3119 21.084 18.9479 21.084 19.3369 20.695L20.6959 19.336C21.0849 18.947 21.0849 18.311 20.6959 17.922L13.2729 10.5Z"
-            fill="#EE3643" />
-        </svg>
-      </a>
+      <button class="modal-close-button" type="button"></button>
       <div class="modal-wrapper">
         <div class="input-form">
           <div class="input-name">
@@ -319,13 +314,7 @@
       </div>
     </form>
   </section>
-  <section class="modal-map">
-    <a class="modal-close-button" href="#"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M13.2729 10.5L20.6949 3.07799C21.0839 2.68899 21.0839 2.05299 20.6949 1.66399L19.3359 0.304995C18.9469 -0.0840054 18.3109 -0.0840054 17.9219 0.304995L10.4999 7.72699L3.07793 0.304995C2.68893 -0.0840054 2.05293 -0.0840054 1.66393 0.304995L0.304934 1.66399C-0.0840664 2.05299 -0.0840664 2.68899 0.304934 3.07799L7.72693 10.5L0.305934 17.922C-0.0830664 18.311 -0.0830664 18.947 0.305934 19.336L1.66493 20.695C2.05393 21.084 2.68993 21.084 3.07893 20.695L10.5009 13.273L17.9229 20.695C18.3119 21.084 18.9479 21.084 19.3369 20.695L20.6959 19.336C21.0849 18.947 21.0849 18.311 20.6959 17.922L13.2729 10.5Z"
-          fill="#EE3643" />
-      </svg>
-    </a>
+  <section class="modal-map visual-hidden">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
       width="943" height="487" allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
