--- a/catalog.html
+++ b/catalog.html
@@ -19,11 +19,11 @@
   <header class="basic-background">
     <div class="nav-up">
       <a class="main-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
-      <input class="search" type="search" placeholder="Поиск:">
+      <input class="search" type="search" id="search" placeholder="Поиск:">
+      <label class="visually-hidden" for="search"></label>
       <a class="bookmarks" href="#">Закладки: 0</a>
       <a class="basket active-basket" href="#">Корзина: 10</a>
       <a class="ordering" href="#">Оформить заказ</a>
-    </div>
     </div>
     <div class="wrapper header-container">
       <div class="nav-down">
@@ -55,7 +55,6 @@
         </ul>
       </nav>
     </div>
-    </div>
   </header>
   <main class="main-catalog">
     <section class="wrapper">
@@ -65,10 +64,11 @@
         <li><a class="catalog-title" href="#">Перфораторы</a></li>
       </ul>
       <div class="main-catalog-title">
-      <h2 class="title">Перфораторы</h2>
+        <h2 class="title">Перфораторы</h2>
       </div>
       <div class="catalog-container">
         <section class="filter-container">
+          <h2 class="visually-hidden">Фильтр каталога</h2>
           <form action="#" method="get">
             <p class="filter-title">Фильтр:</p>
             <fieldset class="form">
@@ -128,7 +128,7 @@
           </form>
         </section>
         <div class="drill-container">
-          <section class="sorting">
+          <div class="sorting">
             <p class="drill-title-sotring">Сортировка:</p>
             <ul class="filter-buttons-list">
               <li><a class="filter-button filter-button-active" href="#">По цене</a></li>
@@ -137,14 +137,14 @@
             </ul>
             <ul class="sorting-button-list">
               <li><a class="sorting-button-up sorting-button-active" href="#"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M5.66241 0L11.1624 10L0.162415 10" fill="#C5C5C5"/>
-              </svg></a>
+                    <path d="M5.66241 0L11.1624 10L0.162415 10" fill="#C5C5C5" />
+                  </svg></a>
               </li>
               <li><a class="sorting-button-down" href="#"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M5.66241 10L0.162415 0H11.1624" fill="#C5C5C5"/>
-              </svg></a></li>
+                    <path d="M5.66241 10L0.162415 0H11.1624" fill="#C5C5C5" />
+                  </svg></a></li>
             </ul>
-          </section>
+          </div>
           <ul class="drill-list-catalog">
             <li class="drill-item">
               <div class="drill-action">
@@ -246,7 +246,6 @@
         </div>
       </div>
     </section>
-    </section>
     <section class="basic-background">
       <div class="wrapper">
         <h2 class="title-catalog">Пара слов о перфораторах</h2>
@@ -295,19 +294,26 @@
           </p>
           <ul class="socials">
             <li>
-              <a class="icon-social" href="#"><svg width="27" height="16" viewBox="0 0 27 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="icon-social" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+                <svg aria-hidden="true" focusable="false" width="27" height="16" viewBox="0 0 27 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M16.138 12.51C17.094 12.201 18.318 14.55 19.621 15.449C20.599 16.13 21.348 15.983 21.348 15.983L24.821 15.933C24.821 15.933 26.636 15.821 25.778 14.379C25.707 14.259 25.275 13.31 23.193 11.357C21.016 9.31398 21.311 9.64498 23.932 6.11298C25.529 3.95998 26.168 2.64498 25.968 2.08498C25.776 1.54598 24.603 1.68598 24.603 1.68598L20.69 1.71298C20.309 1.71398 19.986 1.83198 19.839 2.22798C19.836 2.23198 19.218 3.89398 18.394 5.30698C16.653 8.29598 15.958 8.45498 15.67 8.26798C15.009 7.83498 15.176 6.53098 15.176 5.60398C15.176 2.70698 15.608 1.49898 14.33 1.18698C13.903 1.08298 13.591 1.01498 12.502 1.00498C11.11 0.983976 9.928 1.00498 9.258 1.33398C8.813 1.55698 8.472 2.04598 8.679 2.07398C8.939 2.10898 9.522 2.23398 9.834 2.65998C10.235 3.21198 10.223 4.44898 10.223 4.44898C10.223 4.44898 10.452 7.85998 9.683 8.28298C9.155 8.57298 8.433 7.98098 6.88 5.26698C6.087 3.87898 5.488 2.34498 5.488 2.34498C5.488 2.34498 5.372 2.05998 5.162 1.90398C4.912 1.71898 4.562 1.65998 4.562 1.65998L0.848 1.68398C0.848 1.68398 0.29 1.69998 0.0850002 1.94598C-0.0969998 2.16398 0.0700002 2.61398 0.0700002 2.61398C0.0700002 2.61398 2.979 9.49498 6.273 12.961C9.293 16.143 12.725 15.932 12.725 15.932H14.28C14.28 15.932 14.749 15.878 14.989 15.62C15.213 15.38 15.203 14.929 15.203 14.929C15.203 14.929 15.172 12.82 16.138 12.51Z"
                     fill="white" />
-                </svg></a>
+                </svg>
+              </a>
             </li>
             <li>
-              <a class="icon-social" href="#"><svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="icon-social" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+                <svg aria-hidden="true" focusable="false" width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
                 </svg></a>
             </li>
             <li>
-              <a class="icon-social" href="#"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="icon-social" href="#">
+                <span class="visually-hidden">Инстаграм</span>
+                <svg aria-hidden="true" focusable="false" width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"
                     fill="white" />
@@ -329,7 +335,7 @@
       </div>
     </div>
   </footer>
-  <section class="modal-catalog">
+  <section class="modal-catalog visually-hidden">
     <button class="modal-close-button" type="button"></button>
     <h2 class="modal-title">Товар добавлен в корзину!</h2>
     <div class="modal-button-catalog-list">
