--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <header class="basic-background">
     <div class="nav-up">
       <a class="main-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
       <input class="search" type="search" id="search" placeholder="Поиск:">
-      <label class="visually-hidden" for="search"></label>
-      <a class="bookmarks" href="#">Закладки: 0</a>
-      <a class="basket" href="#">Корзина: 0</a>
-      <a class="ordering" href="#">Оформить заказ</a>
+      <label class="visually-hidden" for="search">Поиск</label>
+      <button class="bookmarks" href="#">Закладки: 0</button>
+      <button class="basket" href="#">Корзина: 0</button>
+      <button class="ordering" href="#">Оформить заказ</button>
     </div>
     <div class="wrapper header-container">
       <div class="nav-down">
@@ -37,8 +36,8 @@
           </p>
         </div>
         <div class="user-navigation">
-          <a class="login" href="#">Войти</a>
-          <a class="register" href="#">Регистрация</a>
+          <button class="login" href="#">Войти</button>
+          <button class="register" href="#">Регистрация</button>
         </div>
       </div>
       <nav class="main-navigation">
@@ -55,19 +54,20 @@
   </header>
   <main>
     <section>
+      <h2 class="visually-hidden">Сервисы</h2>
       <div class="main-container wrapper">
         <ul class="catalog-list">
           <li class="catalog-item material">
             <h2>Материалы</h2>
-            <a class="catalog-button" href="#">На любой вкус</a>
+            <button class="catalog-button" href="#">На любой вкус</button>
           </li>
           <li class="catalog-item tools">
             <h2>Инструмент</h2>
-            <a class="catalog-button" href="#">На все случаи</a>
+            <button class="catalog-button" href="#">На все случаи</button>
           </li>
           <li class="catalog-item tech">
             <h2>Техника</h2>
-            <a class="catalog-button" href="#">Для стройки</a>
+            <button class="catalog-button" href="#">Для стройки</button>
           </li>
           <li class="catalog-slide slide-elements">
             <div class="title-slide">
@@ -79,18 +79,18 @@
             <input type="radio" id="btn-1" name="toggle" checked>
             <input type="radio" id="btn-2" name="toggle">
             <div class="slider-controls">
-              <label for="btn-1"></label>
-              <label for="btn-2"></label>
+              <button class="button-slide button-slide-active" type="button"></button>
+              <button class="button-slide" type="button"></button>
             </div>
             <a class="button slider-catalog-button" href="catalog.html">Открыть каталог</a>
           </li>
           <li class="catalog-item sales">
             <h2>Скидка 50%</h2>
-            <a class="catalog-button" href="#">А 350 товаров</a>
+            <button class="catalog-button" href="#">А 350 товаров</button>
           </li>
           <li class="catalog-item deliver">
             <h2>ДОСТАВКА</h2>
-            <a class="catalog-button" href="#">Бесплатно</a>
+            <button class="catalog-button" href="#">Бесплатно</button>
           </li>
         </ul>
       </div>
@@ -103,52 +103,52 @@
       <ul class="drill-list">
         <li class="drill-item">
           <div class="drill-action">
-            <a class="buy-drill" href="#">Купить</a>
-            <a class="mark-drill" href="#">В закладку</a>
+            <button class="buy-drill" href="#">Купить</button>
+            <button class="mark-drill" href="#">В закладку</button>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 9000</h3>
           <span class="old-price">32500 Р.</span>
-          <a class="buy-button" href="#">25500 Р.</a>
+          <button class="buy-button" href="#">25500 Р.</button>
         </li>
         <li class="drill-item new-product">
           <div class="drill-action">
-            <a class="buy-drill" href="#">Купить</a>
-            <a class="mark-drill" href="#">В закладку</a>
+            <button class="buy-drill" href="#">Купить</button>
+            <button class="mark-drill" href="#">В закладку</button>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
           <span class="old-price">22500 Р.</span>
-          <a class="buy-button" href="#">15500 Р.</a>
+          <button class="buy-button" href="#">15500 Р.</button>
         </li>
 
         <li class="drill-item">
           <div class="drill-action">
-            <a class="buy-drill" href="#">Купить</a>
-            <a class="mark-drill" href="#">В закладку</a>
+            <button class="buy-drill" href="#">Купить</button>
+            <button class="mark-drill" href="#">В закладку</button>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
           <span class="old-price">30500 Р.</span>
-          <a class="buy-button" href="#">25500 Р.</a>
+          <button class="buy-button" href="#">25500 Р.</button>
         </li>
         <li class="drill-item new-product">
           <div class="drill-action">
-            <a class="buy-drill" href="#">Купить</a>
-            <a class="mark-drill" href="#">В закладку</a>
+            <button class="buy-drill" href="#">Купить</button>
+            <button class="mark-drill" href="#">В закладку</button>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
           <span class="old-price">22500 Р.</span>
-          <a class="buy-button" href="#">15500 Р.</a>
+          <button class="buy-button" href="#">15500 Р.</button>
         </li>
       </ul>
     </section>
@@ -175,9 +175,9 @@
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="section-down">
           <ul class="button-list">
-            <li class="button-toogle">Доставка</li>
-            <li class="button-toogle">Гарантия</li>
-            <li class="button-toogle">Кредит</li>
+            <li><button class="button-toogle" type="button">Доставка</button></li>
+            <li><button class="button-toogle" type="button">Гарантия</button></li>
+            <li><button class="button-toogle" type="button">Кредит</button></li>
           </ul>
           <div class="title-deliv">
             <h2 class="service-title">Доставка</h2>
@@ -191,30 +191,32 @@
         </div>
       </div>
     </section>
-    <section class="wrapper section-about-second">
-      <div class="element-about">
-        <h2 class="title">Компания «ТЕХНОМАРТ»</h2>
-        <p class="about-item">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br> ремонта и
-          строительства не оставит равнодушными любителей сэкномить на<br>
-          гастарбайтерах.</p>
-        <p></p>
-        <p class="about-item">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          Техномарт работает со многими транспортными компаниями:</p>
-        <ul class="service-tips">
-          <li class="tips">Деловые линии</li>
-          <li class="tips">Автотрейдинг</li>
-          <li class="tips">ЖелДорЭкспедиция</li>
-        </ul>
-        <a class="button" href="#">Подробнее о компании</a>
-      </div>
-      <div class="element-about">
-        <h2 class="title">Контакты</h2>
-        <p class="about-item">Вы можете забрать товар сами,<br>
-          заехав в наш офис:</p>
-        <img src="img/map.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19">
-        <a class="button button-map" href="#">Заблудились? напишите нам</a>
-      </div>
-    </section>
+    <div class="wrapper">
+      <section class="section-about-second">
+        <div class="element-about">
+          <h2 class="title">Компания «ТЕХНОМАРТ»</h2>
+          <p class="about-item">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br> ремонта и
+            строительства не оставит равнодушными любителей сэкномить на<br>
+            гастарбайтерах.</p>
+          <p></p>
+          <p class="about-item">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+            Техномарт работает со многими транспортными компаниями:</p>
+          <ul class="service-tips">
+            <li class="tips">Деловые линии</li>
+            <li class="tips">Автотрейдинг</li>
+            <li class="tips">ЖелДорЭкспедиция</li>
+          </ul>
+          <a class="button" href="#">Подробнее о компании</a>
+        </div>
+        <div class="element-about">
+          <h2 class="title">Контакты</h2>
+          <p class="about-item">Вы можете забрать товар сами,<br>
+            заехав в наш офис:</p>
+          <img src="img/map.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19">
+          <button class="button button-map" href="#">Заблудились? напишите нам</button>
+        </div>
+      </section>
+    </div>
   </main>
   <footer>
     <div class="background-footer">
@@ -227,7 +229,7 @@
               +7 (812) 555-05-55
             </address>
           </div>
-          <nav class="nav-footer-list">
+          <div class="nav-footer-list">
             <ul class="navigation-footer-first">
               <li><a class="nav-button-footer first-button" href="#">Компания</a></li>
               <li><a class="nav-button-footer" href="#">Новости</a></li>
@@ -241,7 +243,7 @@
               <li><a class="nav-button-footer" href="#">Инструмент</a></li>
               <li><a class="nav-button-footer" href="#">Спецпредлжения</a></li>
             </ul>
-          </nav>
+          </div>
         </div>
       </div>
     </div>
@@ -295,8 +297,9 @@
       </div>
     </div>
   </footer>
-  <section class="modal visually-hidden">
-    <form class="feedback-form" action="index.html" method="post">
+  <section class="modal" hidden>
+    <h2 class="visually-hidden">Модальное окно</h2>
+    <form class="feedback-form" method="get" action="https://echo.htmlacademy.ru" target="_blank">
       <button class="modal-close-button" type="button"></button>
       <div class="modal-wrapper">
         <div class="input-form">
@@ -315,12 +318,11 @@
         </div>
       </div>
       <div class="modal-button-section">
-        <h2 class="visually-hidden">Модальное окно</h2>
-        <a class="button modal-button" href="#">Отправить</a>
+        <button class="button modal-button" type="submit">Отправить</button>
       </div>
     </form>
   </section>
-  <section class="modal-map visually-hidden">
+  <section class="modal-map" hidden="true">
     <h2 class="visually-hidden">Модальная карта</h2>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
