--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header class="basic-background">
     <div class="nav-up">
       <a class="main-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
       <input class="search" type="search" id="search" placeholder="Поиск:">
       <label class="visually-hidden" for="search">Поиск</label>
-      <button class="bookmarks" href="#">Закладки: 0</button>
-      <button class="basket" href="#">Корзина: 0</button>
-      <button class="ordering" href="#">Оформить заказ</button>
+      <button class="bookmarks">Закладки: 0</button>
+      <button class="basket">Корзина: 0</button>
+      <button class="ordering">Оформить заказ</button>
     </div>
     <div class="wrapper header-container">
       <div class="nav-down">
@@ -36,8 +37,8 @@
           </p>
         </div>
         <div class="user-navigation">
-          <button class="login" href="#">Войти</button>
-          <button class="register" href="#">Регистрация</button>
+          <a class="login" href="#">Войти</a>
+          <a class="register" href="#">Регистрация</a>
         </div>
       </div>
       <nav class="main-navigation">
@@ -59,15 +60,15 @@
         <ul class="catalog-list">
           <li class="catalog-item material">
             <h2>Материалы</h2>
-            <button class="catalog-button" href="#">На любой вкус</button>
+            <a class="catalog-button" href="#">На любой вкус</a>
           </li>
           <li class="catalog-item tools">
             <h2>Инструмент</h2>
-            <button class="catalog-button" href="#">На все случаи</button>
+            <a class="catalog-button" href="#">На все случаи</a>
           </li>
           <li class="catalog-item tech">
             <h2>Техника</h2>
-            <button class="catalog-button" href="#">Для стройки</button>
+            <a class="catalog-button" href="#">Для стройки</a>
           </li>
           <li class="catalog-slide slide-elements">
             <div class="title-slide">
@@ -86,11 +87,11 @@
           </li>
           <li class="catalog-item sales">
             <h2>Скидка 50%</h2>
-            <button class="catalog-button" href="#">А 350 товаров</button>
+            <a class="catalog-button" href="#">А 350 товаров</a>
           </li>
           <li class="catalog-item deliver">
             <h2>ДОСТАВКА</h2>
-            <button class="catalog-button" href="#">Бесплатно</button>
+            <a class="catalog-button" href="#">Бесплатно</a>
           </li>
         </ul>
       </div>
@@ -103,52 +104,52 @@
       <ul class="drill-list">
         <li class="drill-item">
           <div class="drill-action">
-            <button class="buy-drill" href="#">Купить</button>
-            <button class="mark-drill" href="#">В закладку</button>
+            <button class="buy-drill" type="button">Купить</button>
+            <button class="mark-drill" type="button">В закладку</button>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 9000</h3>
           <span class="old-price">32500 Р.</span>
-          <button class="buy-button" href="#">25500 Р.</button>
+          <button class="buy-button" type="button">25500 Р.</button>
         </li>
         <li class="drill-item new-product">
           <div class="drill-action">
-            <button class="buy-drill" href="#">Купить</button>
-            <button class="mark-drill" href="#">В закладку</button>
+            <button class="buy-drill" type="button">Купить</button>
+            <button class="mark-drill" type="button">В закладку</button>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
           <span class="old-price">22500 Р.</span>
-          <button class="buy-button" href="#">15500 Р.</button>
+          <button class="buy-button" type="button">15500 Р.</button>
         </li>
 
         <li class="drill-item">
           <div class="drill-action">
-            <button class="buy-drill" href="#">Купить</button>
-            <button class="mark-drill" href="#">В закладку</button>
+            <button class="buy-drill" type="button">Купить</button>
+            <button class="mark-drill" type="button">В закладку</button>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
           <span class="old-price">30500 Р.</span>
-          <button class="buy-button" href="#">25500 Р.</button>
+          <button class="buy-button" type="button">25500 Р.</button>
         </li>
         <li class="drill-item new-product">
           <div class="drill-action">
-            <button class="buy-drill" href="#">Купить</button>
-            <button class="mark-drill" href="#">В закладку</button>
+            <button class="buy-drill" type="button">Купить</button>
+            <button class="mark-drill" type="button">В закладку</button>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
           <span class="old-price">22500 Р.</span>
-          <button class="buy-button" href="#">15500 Р.</button>
+          <button class="buy-button" type="button">15500 Р.</button>
         </li>
       </ul>
     </section>
@@ -212,8 +213,8 @@
           <h2 class="title">Контакты</h2>
           <p class="about-item">Вы можете забрать товар сами,<br>
             заехав в наш офис:</p>
-          <img src="img/map.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19">
-          <button class="button button-map" href="#">Заблудились? напишите нам</button>
+          <button class="button-modal-map" type="button"><img src="img/map.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19"></button>
+          <button class="button button-map" type="button">Заблудились? напишите нам</button>
         </div>
       </section>
     </div>
@@ -322,7 +323,7 @@
       </div>
     </form>
   </section>
-  <section class="modal-map" hidden="true">
+  <section class="modal-map" hidden>
     <h2 class="visually-hidden">Модальная карта</h2>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
