--- a/catalog.html
+++ b/catalog.html
@@ -21,9 +21,9 @@
       <a class="main-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
       <input class="search" type="search" id="search" placeholder="Поиск:">
       <label class="visually-hidden" for="search"></label>
-      <button class="bookmarks" href="#">Закладки: 0</button>
-      <button class="basket active-basket" href="#">Корзина: 10</button>
-      <button class="ordering" href="#">Оформить заказ</button>
+      <a class="bookmarks" href="#">Закладки: 0</a>
+      <a class="basket active-basket" href="#">Корзина: 10</a>
+      <a class="ordering" href="#">Оформить заказ</a>
     </div>
     <div class="wrapper header-container">
       <div class="nav-down">
@@ -31,16 +31,16 @@
           строительных материалов<br>
           и инструментов для ремонта</p>
         <div class="address-block">
-          <button class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</button>
+          <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
           <p class="address-nav">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           </p>
         </div>
         <div class="user-interface">
-          <button class="login-out" href="#">Равшан Джамшутович</button>
+          <a class="login-out" href="#">Равшан Джамшутович</a>
           <ul class="user-functions">
-            <li><button class="user-order" href="#">Мои заказы</button></li>
-            <li><button class="user-profile" href="#">Личный кабинет</button></li>
+            <li><a class="user-order" href="#">Мои заказы</a></li>
+            <li><a class="user-profile" href="#">Личный кабинет</a></li>
           </ul>
         </div>
       </div>
@@ -124,7 +124,7 @@
               <li>
                 <input class="filter-input-radio" type="radio" name="supply" id="filter-lan" value="lan">
                 <label class="filter-item" for="filter-lan">Сетевые</label>
-              </li>
+            a
             </ul>
           </fieldset>
           <button class="filter-show" type="submit">Показать</button>
@@ -134,16 +134,16 @@
         <div class="sorting">
           <p class="drill-title-sotring">Сортировка:</p>
           <ul class="filter-buttons-list">
-            <li><button class="filter-button filter-button-active" href="#">По цене</button></li>
-            <li><button class="filter-button" href="#">По типу</button></li>
-            <li><button class="filter-button" href="#">По функционалу</button></li>
+            <li><button class="filter-button filter-button-active">По цене</button></li>
+            <li><button class="filter-button">По типу</button></li>
+            <li><button class="filter-button">По функционалу</button></li>
           </ul>
           <ul class="sorting-button-list">
-            <li><button class="sorting-button-up sorting-button-active" href="#"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <li><button class="sorting-button-up sorting-button-active"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M5.66241 0L11.1624 10L0.162415 10" fill="#C5C5C5" />
                 </svg></button>
             </li>
-            <li><button class="sorting-button-down" href="#"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <li><button class="sorting-button-down"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M5.66241 10L0.162415 0H11.1624" fill="#C5C5C5" />
                 </svg></button></li>
           </ul>
@@ -151,104 +151,103 @@
         <ul class="drill-list-catalog">
           <li class="drill-item">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size">
               <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
             </p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">30500 Р.</span>
-            <button class="buy-button" href="#">25500 Р.</button>
+            <button class="buy-button">25500 Р.</button>
           </li>
           <li class="drill-item">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">30500 Р.</span>
-            <button class="buy-button" href="#">25500 Р.</button>
+            <button class="buy-button">25500 Р.</button>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">32500 Р.</span>
-            <button class="buy-button" href="#">25500 Р.</button>
+            <button class="buy-button">25500 Р.</button>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
             <span class="old-price">22500 Р.</span>
-            <button class="buy-button" href="#">15500 Р.</button>
+            <button class="buy-button">15500 Р.</button>
           </li>
           <li class="drill-item">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">30500 Р.</span>
-            <button class="buy-button" href="#">25500 Р.</button>
+            <button class="buy-button">25500 Р.</button>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
-            <button class="buy-button" href="#">12500 Р.</button>
+            <button class="buy-button">12500 Р.</button>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
             <span class="old-price">22500 Р.</span>
-            <button class="buy-button" href="#">15500 Р.</button>
+            <button class="buy-button">15500 Р.</button>
           </li>
           <li class="drill-item">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">30500 Р.</span>
-            <button class="buy-button" href="#">25500 Р.</button>
+            <button class="buy-button">25500 Р.</button>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" href="#">Купить</button>
-              <button class="mark-drill" href="#">В закладку</button>
+              <button class="buy-drill">Купить</button>
+              <button class="mark-drill">В закладку</button>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
-            <button class="buy-button" href="#">25500 Р.</button>
+            <button class="buy-button">25500 Р.</button>
           </li>
         </ul>
         <ul class="pagination">
-          <li><button class="pagination-button pagination-active" href="#">1</a></li>
-          <li><button class="pagination-button" href="#">2</button></li>
-          <li><button class="pagination-button" href="#">3</button></li>
-          <li><button class="pagination-button" href="#">СЛЕДУЮЩАЯ</button></li>
+          <li><button class="pagination-button pagination-active">1</button></li>
+          <li><button class="pagination-button">2</button></li>
+          <li><button class="pagination-button">3</button></li>
+          <li><button class="pagination-button">СЛЕДУЮЩАЯ</button></li>
         </ul>
       </div>
     </div>
-    </section>
     <section class="basic-background">
       <div class="wrapper">
         <h2 class="title-catalog">Пара слов о перфораторах</h2>
@@ -338,12 +337,14 @@
       </div>
     </div>
   </footer>
-  <section class="modal-catalog visually-hidden">
+  <section class="modal-catalog" hidden>
     <h2 class="modal-title">Товар добавлен в корзину!</h2>
-    <button class="modal-close-button" type="button"></button>
-    <div class="modal-button-catalog-list">
-      <button class="modal-button-catalog" href="#">Оформить заказ</button>
-      <button class="modal-button-catalog" href="#">Продолжить покупки</button>
+    <div class="modal-catalog-container">
+      <button class="modal-close-button" type="button"></button>
+      <div class="modal-button-catalog-list">
+        <button class="modal-button-catalog">Оформить заказ</button>
+        <button class="modal-button-catalog">Продолжить покупки</button>
+      </div>
     </div>
   </section>
 </body>
